syntax = "proto3";

package blockjoy.api.ui_v1;

import "common.proto";

message CreateBillRequest {
  RequestMeta meta = 1;
  optional Uuid user_id = 2;
  optional Uuid org_id = 3;
}

message CreateBillResponse {
  ResponseMeta meta = 1;
  Bill bill = 2;
}

/* Billing related services */
service BillingService {
  rpc Create(CreateBillRequest) returns (CreateBillResponse) {}
}
