syntax = "proto3";

package blockjoy.api.ui_v1;

import "common.proto";

message GetHostProvisionRequest {
  RequestMeta meta = 1;
}

message GetHostProvisionResponse {
  ResponseMeta meta = 1;
}

message CreateHostProvisionRequest {
  RequestMeta meta = 1;
}

message CreateHostProvisionResponse {
  ResponseMeta meta = 1;
}

/* Host provisioning */
service HostProvisionService {
  /* Get a single host provision */
  rpc Get(GetHostProvisionRequest) returns (GetHostProvisionResponse) {}
  /* Create a single host provision */
  rpc Create(CreateHostProvisionRequest) returns (CreateHostProvisionResponse) {}
}
