syntax = "proto3";

package blockjoy.api.ui_v1;

import "common.proto";

message InfoUpdate {
  optional Host host = 1;
  optional Node node = 2;
}

message GetUpdatesRequest {
  RequestMeta meta = 1;
}

message GetUpdatesResponse {
  ResponseMeta meta = 1;
  InfoUpdate update = 2;
}

/* Retrieve updates sent by the API server */
service UpdateService {
  /* Open a persisted connection to receive updates on entities as they occur on the server side */
  rpc Updates(GetUpdatesRequest) returns (stream GetUpdatesResponse) {};
}
